--- a/src/main/webapp/base/board.html
+++ b/src/main/webapp/base/board.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Board</title>
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+    <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link active">게시판</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">회원 목록</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        </ul>
 
+        <div class="col-md-3 text-end">
+            <button type="button" class="btn btn-outline-primary me-2">Login</button>
+            <button type="button" class="btn btn-primary">Sign-up</button>
+        </div>
+    </header>
+</div>
+
+<div class="container text-center" style="margin-top: 100px">
+    <div class="row justify-content-center">
+        <div class="col-1">
+            번호
+        </div>
+        <div class="col-5">
+            제목
+        </div>
+        <div class="col-2">
+            작성자
+        </div>
+        <div class="col-2">
+            작성일
+        </div>
+        <div class="col-1">
+            조회수
+        </div>
+        <div class="col-1">
+            댓글수
+        </div>
+    </div>
+</div>
 </body>
 </html>
