member_list html 추가

--- a/src/main/webapp/base/member_list.html
+++ b/src/main/webapp/base/member_list.html
@@ -41,9 +41,12 @@
 </div>
 
 <div class="container text-center" style="margin-top: 100px">
+
+    <hr width="100%" color="black" noshade/>
+
     <div class="row justify-content-center">
         <div class="col-1">
-            번호
+            NO
         </div>
         <div class="col-2">
             성명
@@ -61,6 +64,9 @@
             가입일자
         </div>
     </div>
+
+    <hr width="100%" color="black" noshade/>
+
 </div>
 </body>
 </html>
