--- a/src/main/webapp/base/board.html
+++ b/src/main/webapp/base/board.html
@@ -41,9 +41,13 @@
 </div>
 
 <div class="container text-center" style="margin-top: 100px">
+
+    <hr width="100%" color="black" noshade/>
+
     <div class="row justify-content-center">
+
         <div class="col-1">
-            번호
+            NO
         </div>
         <div class="col-5">
             제목
@@ -60,7 +64,11 @@
         <div class="col-1">
             댓글수
         </div>
+
     </div>
+
+    <hr width="100%" color="black" noshade/>
+
 </div>
 </body>
 </html>
